db-cluster/users/k8s-cluster2/ns-sorn-sophamarinet-5e2adcb5/testing/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: testing-tcp
  namespace: ns-sorn-sophamarinet-5e2adcb5
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`testing.autonomous-istad.com`)
    services:
    - name: testing-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
